# rust-raytrace

./: .gitignore.swp  .swp  Cargo.toml  README.md  test_scene.txt
src/: .camera.rs.swp  .color.rs.swp  .lib.rs.swp  .main.rs.swp  .scene.rs.swp  .swp  bmp.rs  camera.rs  color.rs  lib.rs  main.rs  raytrace.rs  scene.rs  serialize.rs  shapes.rs  texture.rs  types.rs
