[package]
name = "raytrace"
version = "0.1.0"
authors = ["James <dong.james.sept14@gmail.com>"]

[features]
default = ["skybox"]
skybox = ["image"]

[dependencies]
nalgebra = "^0.4.0"
image = { version = "^0.6.1", optional = true }
rand = "^0.3.12"

[lib]
name = "libraytrace"
path = "src/lib.rs"

[[bin]]
name = "raytrace"
path = "src/main.rs"
doc = false
